# MGR-S-Complete

./: .gitignore  CMakeLists.txt  LICENSE  OWNERSHIP.md  README.md  conanfile.py  repo-structure.md  test_compile.cpp  test_installation.bat
app/: ApplicationController.cpp  ApplicationController.h  CMakeLists.txt  main.cpp  mgrs_bridge.cpp  test_pipeline.cpp  test_unavailable.cpp
assets/docs/: context.md
assets/docs_files/: checklist.md
docs/: project-overview.md  safety-guidelines.md
installer/: AppxManifest.xml  README.txt  install.bat  mgrs_setup.iss  test_installer.bat
installer/config/: config.xml
mgrs-bridge/: .gitignore  CHANGELOG.md  README_FR.md  install.sh  mkdocs.yml
mgrs-bridge/.github/workflows/: ci.yml  release.yml  security.yml
mgrs-bridge/cmd/herald/: main.go
mgrs-bridge/configs/: herald.example.yaml
mgrs-bridge/docs/: changelog.md  index.md
mgrs-bridge/docs/building-herald/: self-hosting-session.md
mgrs-bridge/docs/guide/: notifications.md  workflow.md
mgrs-bridge/internal/auth/: oauth.go  oauth_test.go  secret.go  sqlitestore.go  store.go  token.go  token_test.go
mgrs-bridge/internal/config/: config.go  loader_test.go
mgrs-bridge/internal/executor/: executor.go  kill.go  prompt.go  prompt_test.go  registry.go  registry_test.go
mgrs-bridge/internal/executor/claude/: claude.go  claude_test.go  stream.go  stream_test.go
mgrs-bridge/internal/git/: git.go  git_test.go
mgrs-bridge/internal/mcp/handlers/: cancel_task.go  check_task.go  get_diff.go  get_diff_test.go  get_logs.go  get_result.go  handlers_test.go  herald_push.go  herald_push_test.go  list_projects.go  list_projects_test.go  read_file.go  read_file_test.go  start_task.go  start_task_test.go
mgrs-bridge/internal/mcp/middleware/: auth.go  ratelimit.go  ratelimit_test.go  security.go  security_test.go
mgrs-bridge/internal/notify/: mcp_test.go  notifier_test.go
mgrs-bridge/internal/project/: manager.go  manager_test.go  project.go
mgrs-bridge/internal/store/: migrations.go  store.go
mgrs-bridge/internal/task/: manager_test.go  task.go
mgrs-bridge/internal/tunnel/: ngrok.go  tunnel_test.go
plans/: architecture.md  complete-design-plan.md  frame-execution.md  phase2-graphics-pipeline.md  phase3-multigpu-scheduling.md  phase4-runtime-control.md  phase5-extensibility-backends.md  phase6-optimization-hardening.md  problem-solution.md  roadmap.md  scaling.md  ue5-plugin.md  vulkan-api.md
runtime/include/mgrs/: command_buffer.h  context.h  device.h  memory.h  pipeline.h  pipeline_layout.h  render_pass.h  resource.h  scheduler.h  semaphore.h  shader.h  swapchain.h  types.h
runtime/src/core/: command_buffer.cpp  context.cpp  mgrs_scheduler.cpp  pipeline.cpp  pipeline_layout.cpp  render_pass.cpp  semaphore.cpp  shader.cpp  swapchain.cpp
tests/: test_core.py
tools/: create_icon.py  mgrs_build.py
ui/: mgrs_app.spec  mgrs_bridge.py  mgrs_core.py  mgrs_gui.py  mgrs_memory.py  mgrs_monitor.py  mgrs_scheduler.py  mgrs_tray.py  mgrs_types.py  mgrs_ui.pro  requirements.txt  test_ui.bat  test_ui.py  win32_ui.rc
ui/build_pyi/mgrs_app/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-mgrs_app.txt  xref-mgrs_app.html
ui/inc/: mainwindow.h
ui/resources/: mgrs_resources.qrc
ui/src/: mainwindow.cpp  win32_ui.cpp  win32_ui.h
ui/ui/: mainwindow.ui
vulkan/include/mgrs/vulkan/: vulkan_command_buffer.h  vulkan_context.h  vulkan_device.h  vulkan_memory.h  vulkan_pipeline.h  vulkan_pipeline_layout.h  vulkan_render_pass.h  vulkan_semaphore.h  vulkan_shader.h  vulkan_swapchain.h  vulkan_sync.h
vulkan/src/backend/: vulkan_command_buffer.cpp  vulkan_context.cpp  vulkan_device.cpp  vulkan_memory.cpp  vulkan_pipeline.cpp  vulkan_pipeline_layout.cpp  vulkan_render_pass.cpp  vulkan_semaphore.cpp  vulkan_shader.cpp  vulkan_swapchain.cpp
